<resources>
    <string name="app_name">android-app</string>
    <string name="asoif">A song of Ice &amp; Fire</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login_btn">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title"><![CDATA[A song of Ice & Fire]]></string>
    <string name="menu">Menu</string>
    <string name="jugar">PLAY</string>
    <string name="aboutText">The king has called all the Iron Throne aspirants from all over Westeros to Kingslanding to find out who is the most suitable to command the armies against the threat of the Night King, in this game you are one of those contenders and you will explore the Red Keep while you participate in strategy duels with all the Lords

-Gameplay: Movement on a 2D stage (pokemon style) on a linear map that you can explore at the same time to obtain bonuses (you will meet characters that share advice with you that the game will interpret as bonuses), the opponents will be found on the map, which they will interrupt you and challenge you, the challenge will be in turns pokemon style</string>
    <string name="about_the_game">About the game</string>
    <string name="characters">Houses</string>
    <string name="log_out">LOG OUT</string>
    <string name="select_save">SELECT SAVE GAME</string>
    <string name="addBtn">ADD NEW GAME</string>
    <string name="new_hint">NEW GAME NAME</string>
    <string name="back">Back</string>
    <string name="h_targ">House Targaryen</string>
    <string name="h_stark">House Stark</string>
    <string name="h_lann">House Lannister</string>
    <string name="h_bara">House Baratheon</string>
    <string name="sign_up">SIGN UP</string>
    <string name="go_to_login">Already have an account?</string>
    <string name="create_an_account">Create an account</string>


</resources>